# python-gui-test

./: .editorconfig  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yaml
src/: main.py
src/data/: create_db.py  db_connection.py
src/ui/: app.py
src/ui/components/: tableview.py
src/ui/features/graph/: graph_screen.py
src/ui/features/main_window/: main_window.py
src/ui/features/table/: table_model.py  table_screen.py  table_view_model.py
