[project]
name = "python-gui-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pyedifice>=2.11.0",
    "pyside6-essentials>=6.8.1.1",
]

[tool.uv.pip]
generate-hashes = true

[dependency-groups]
dev = [
    "nuitka>=2.5.9",
    "pip>=24.3.1",
    "watchdog>=6.0.0",
]